locator left side integration done

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,10 @@ a {
     color-scheme: dark;
   }
 }
+
+.app {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
+}
