--- a/app/sass/pages/locator.scss
+++ b/app/sass/pages/locator.scss
@@ -62,6 +62,10 @@
       justify-content: center;
       align-content: center;
       height: 100%;
+
+      &-info {
+        color: $color-primary;
+      }
     }
   }
 }
