--- a/app/sass/pages/locator.scss
+++ b/app/sass/pages/locator.scss
@@ -11,6 +11,7 @@
       justify-content: start;
       align-content: start;
       padding-top: 20px !important;
+      gap: 20px;
     }
 
     &-left {
