--- a/app/sass/pages/locator.scss
+++ b/app/sass/pages/locator.scss
@@ -8,10 +8,18 @@
     grid-template-columns: repeat(2, 1fr);
 
     &-place {
+      display: grid;
       justify-content: start;
       align-content: start;
       padding-top: 20px !important;
       gap: 20px;
+      overflow: auto;
+
+      @media only screen and (max-width: 1500px) {
+        display: grid !important;
+        grid-auto-flow: row !important;
+        grid-template-columns: 1fr !important;
+      }
     }
 
     &-left {
@@ -26,6 +34,7 @@
         display: grid;
         gap: 20px;
         grid-auto-flow: column;
+        justify-content: space-between;
       }
 
       &-bottom {
