--- a/app/sass/pages/userForm.scss
+++ b/app/sass/pages/userForm.scss
@@ -27,6 +27,7 @@
           border: none;
           border-radius: 5px;
           padding-left: 10px;
+          color: white !important;
         }
 
         textarea {
