--- a/app/sass/pages/userForm.scss
+++ b/app/sass/pages/userForm.scss
@@ -38,6 +38,7 @@
           border: none;
           border-radius: 5px;
           padding: 10px;
+          color: white !important;
         }
       }
     }
